--- a/BackendDeveloperProject.Web/appsettings.json
+++ b/BackendDeveloperProject.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BackendDeveloperProjectDb": "Server=.;Database=BackendDeveloperProjectDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
