--- a/BackendDeveloperProject.Web/BackendDeveloperProject.Web.csproj
+++ b/BackendDeveloperProject.Web/BackendDeveloperProject.Web.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BackendDeveloperProject.Business\BackendDeveloperProject.Business.csproj" />
     <ProjectReference Include="..\BackendDeveloperProject.Data\BackendDeveloperProject.Data.csproj" />
   </ItemGroup>
 
